feat(swagger): add more annotations
