# docs/swagger.yaml
@@ -14,6 +14,35 @@ definitions:
       status_code:
         type: integer
     type: object
+  response.Response:
+    properties:
+      data: {}
+      message:
+        type: string
+    type: object
+  transaction.OperationType:
+    enum:
+    - 1
+    - 2
+    - 3
+    - 4
+    type: integer
+    x-enum-varnames:
+    - Purchase
+    - Installment
+    - Withdrawal
+    - Payment
+  transaction.Transaction:
+    properties:
+      account_id:
+        type: integer
+      amount:
+        type: number
+      id:
+        type: integer
+      operation_type_id:
+        $ref: '#/definitions/transaction.OperationType'
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -21,6 +50,39 @@ info:
   title: Transaction APIs
   version: "1.0"
 paths:
+  /accounts:
+    post:
+      consumes:
+      - application/json
+      description: Create a new account
+      operationId: create-account
+      parameters:
+      - description: Account object to be created
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/account.Account'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Error'
+      summary: Create a new account
   /accounts/{id}:
     get:
       consumes:
@@ -54,4 +116,37 @@ paths:
       summary: Get an account
       tags:
       - accounts
+  /transaction:
+    post:
+      consumes:
+      - application/json
+      description: Create a new transaction
+      operationId: create-transaction
+      parameters:
+      - description: Transaction object to be created
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/transaction.Transaction'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Error'
+      summary: Create a new transaction
 swagger: "2.0"
